--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 						<div>
 							<a href="#" class="txt1">
-								Forgot Password?
+								Forgot Password? then fuck u
 							</a>
 						</div>
 					</div>
