--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 						<div>
 							<a href="#" class="txt1">
-								Forgot Password? then fuck u
+								Forgot Password? then fuck u bitch
 							</a>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 					
 					<div class="text-center p-t-46 p-b-20">
 						<span class="txt2">
-							or sign up using
+							or sign up using Fbook
 						</span>
 					</div>
 
